--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "terraform-parser",
-  "version": "1.0.1",
-  "description": "Библиотека для парсинга terraform формата",
-  "main": "lib/terraform-parser.js",
+  "name": "terraform-kafka-diagram",
+  "version": "1.1.0",
+  "description": "Library for building a datagram using the config for kafka",
+  "main": "src/builder-diagram.js",
+  "bin": {
+    "terraform-kafka-diagram": "./src/run.js"
+  },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "start": "node src/builder-diagram.js"
   },
   "author": "antonrls",
   "license": "ISC",
